# smart_contract_demo

./: .gitignore  ABI.json  config.local.env  docker-compose.yml  init.sql  pyproject.toml  test.py  test2.py  test_3.py
lib/: base_exception.py  setting.py
smart_contract_api/: config.py  main.py
smart_contract_api/business_model/: auth_bo.py  customer_bo.py  eth_bo.py  management_bo.py  smart_contract.py
smart_contract_api/data_access_object/: __init__.py  auth.py  customer.py  management.py
smart_contract_api/endpoint/: auth.py  customer.py  eth.py  management.py
smart_contract_api/lib/: base_exception.py  logger.py  setting.py
smart_contract_api/schema/: auth.py  customer.py  eth.py  management.py  smart_contract.py
sql/: init.sql
test/: test_smart_contract.py
